# verifac

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 11c0b5088831_monto_mensual.py  394c0778d3ec_uuid_schema.py  6783f5721a24_factura_receptor_moneda_origen_pdf_.py  989b1be45903_usuarios_y_audit_logs.py  9f4da7b5aa8b_rfc_emisor_en_montos_mensuales.py  d50f5838fbe4_confirmacion_correo_profesor.py  d6670ced9ceb_configuracion_correo.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auditoria.py  auth.py  catalogo_claves.py  dashboard.py  facturas.py  profesor_claves.py  profesores.py  usuarios.py  watcher.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/db/: base.py
backend/app/models/: audit_log.py  catalogo_clave.py  configuracion_correo.py  factura.py  monto_mensual.py  profesor.py  profesor_clave.py  usuario.py  validacion_detalle.py
backend/app/schemas/: __init__.py  catalogo_clave.py  factura.py  profesor.py
backend/app/services/: audit.py  cfdi_parser.py  config_correo.py  dashboard.py  email_confirmacion.py  excel_montos_parser.py  excel_parser.py  export_excel.py  imap_watcher.py  pdf_cotejo.py  revalidacion.py  validador.py  validador_excel.py
backend/tests/: conftest.py  factories.py  test_config_correo.py  test_dashboard.py  test_email_confirmacion.py  test_excel_montos_parser.py  test_export_excel.py  test_pdf_cotejo.py  test_revalidacion.py  test_validador.py
(+24 files in other folders)
