[project]
name = "bbva_interno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.128.8",
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.39.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
